# boson-lang

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.sh  dump.txt  error.txt  head.txt  hello.txt  op  op.txt  t  test.np  test.py
benchmarks/: call_func.np  exec_async.np  fib.np  fib.py  fib_dynamic.np  fstat.np  fwrite.np  generate_chart.py  input.np  shell.np  sleep.np  subprocess.np  test.js  test.py  thread.np  thread_mut.np  wait.np
boson/: Cargo.toml
boson/src/: lib.rs  main.rs
boson/src/api/: mod.rs  native.rs  packing.rs  wasm.rs
boson/src/api/arch_syscalls/: mod.rs  x86.rs  x86_64.rs
boson/src/compiler/: loader.rs  mod.rs  symtab.rs
boson/src/config/: mod.rs
boson/src/isa/: mod.rs
boson/src/lexer/: mod.rs
boson/src/parser/: ast.rs  debug.rs  exp.rs  mod.rs
boson/src/tests/: types.rs
boson/src/types/: array.rs  buffer.rs  builtins.rs  closure.rs  dyn_module.rs  exception.rs  hash.rs  iter.rs  mod.rs  object.rs  subroutine.rs  th.rs
boson/src/vm/: alu.rs  controls.rs  errors.rs  ffi.rs  frames.rs  global.rs  mod.rs  stack.rs  thread.rs
examples/: array_hashmap.np  attr.np  bytes_iter.np  call_func.np  closures.np  dynamic_modules.np  encode_packed.np  eval_bytecode.np  exec_async.np  exec_async_2.np  fappend.np  fib.np  fib_dynamic.np  fib_dynamic.np.b  fib_iter.np  fread.np  function_objects.np  hello.np  hello.np.b  if_else.np  input.np  iter.np  iter_noloop.np  lambda.np  operators.np  overflow.np  sleep.np  sort.np  sort.py  stdin.np  stdout.np  str-to-bytes.np  thread.np  threads_2.np
examples/benchmarks/base64/: b64.np  b64.py
examples/benchmarks/regex/: re.np  regex.py
examples/benchmarks/sort_benchmark/: a.out  sort.np
examples/modules/: base64.np  hello.np  re.np  syscalls.np
examples/modules/syscalls/: read.np  write.np  (+1 more)
examples/sort_benchmark/: sort.cc  sort.js  sort.py
examples/webserver/: Dockerfile  build-docker.sh  build-heroku-docker.sh  client.py  data.html  metrics.txt  server-multithreaded.np  server-multithreaded.np.b  server.np  test.sh
misc/: overflow_check.rs
modules/: install.sh
modules/b64/: Cargo.toml
modules/hello-world/: Cargo.toml
modules/hello_world/: Cargo.toml
modules/re/: Cargo.toml
modules/syscalls/: Cargo.toml
modules/syscalls/src/: lib.rs
modules/syscalls/src/platform/: x86_64.rs
nplang-compiler/: Cargo.toml
nplang-compiler/src/: main.rs
nplang-vm/: Cargo.toml
nplangc/: Cargo.toml  estimate.txt
nplangc/src/: main.rs
nplangvm/: Cargo.toml
(+38 files in other folders)
