[package]
name = "boson"
version = "0.1.0"
authors = ["Narasimha1997 <yogaimpression@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "boson-eval"
path = "src/bin/boson_eval.rs"

[[bin]]
name = "boson"

[dependencies]
rustyline = { version = "1.0.0", optional = true }

[features]
repl = ["rustyline"]
