[package]
name = "boson"
version = "0.0.1"
authors = ["Narasimha1997 <yogaimpression@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "boson-eval"
path = "src/bin/boson_eval.rs"

[[bin]]
name = "boson-dis"
path = "src/bin/boson_dis.rs"

[[bin]]
name = "boson-compile"
path = "src/bin/boson_compile.rs"

[[bin]]
name = "boson"
path = "src/bin/boson_repl.rs"
required-features = ["repl"]

[dependencies]
rustyline = { version = "1.0.0", optional = true }
byteorder = { version = "1", default-features = true }
libloading = "0.7"

[features]
repl = ["rustyline"]
