[package]
name = "boson"
version = "0.0.1"
authors = ["Narasimha1997 <yogaimpression@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "boson-eval"
path = "src/bin/boson_eval.rs"

[[bin]]
name = "boson-dis"
path = "src/bin/boson_dis.rs"

[[bin]]
name = "boson-compile"
path = "src/bin/boson_compile.rs"

[[bin]]
name = "boson"
path = "src/bin/boson_repl.rs"
required-features = ["repl"]

[[bin]]
name = "boson-embed"
path = "src/bin/boson_embed.rs"


[dependencies]
rustyline = { version = "1.0.0", optional = true }
byteorder = { version = "1", default-features = true }
libloading = "0.7"
rand = {version = "0.8.4", features = [ "small_rng" ]}
packed-encoder = "0.1.1"
syscall-numbers = { path = "../third_party/syscall-numbers" }
cranelift = "0.85.1"
cranelift-module = "0.85.1"
cranelift-jit = "0.85.1"


[features]
repl = ["rustyline"]
