[package]
name = "syscalls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
syscall-numbers = { path = "../../third_party/syscall-numbers" }
boson = { path = "../../boson" }

